speed up SSL connection time by approx factor of 2, for WolfSSL.
Optimize common RSA math operations (WOLFSSL_HAVE_SP_RSA),
Use intel assembly optimizations for it.

"slow" ssl tests, such as main.ssl-big and main.ssl_connect now execute
in half the time, with this patch.

--- a/extra/wolfssl/user_settings.h.in
+++ b/extra/wolfssl/user_settings.h.in
@@ -59,5 +59,8 @@
 #cmakedefine USE_FAST_MATH
 #cmakedefine WOLFSSL_X86_64_BUILD
 #define WOLFSSL_SP_MATH_ALL
+#define WOLFSSL_HAVE_SP_RSA
+#cmakedefine WOLFSSL_SP_X86_64
+#cmakedefine WOLFSSL_SP_X86_64_ASM
 
 #endif  /* WOLFSSL_USER_SETTINGS_H */
